<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".activity.ConfigUserActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/user_guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/user_guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.86"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/user_guide1"
        app:layout_constraintRight_toRightOf="@id/user_guide2"
        app:layout_constraintBottom_toTopOf="@id/user_list">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_btn_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_user"
            android:textStyle="normal"
            android:textSize="15dp"
            android:textColor="#707070"
            android:lineSpacingExtra="5.5sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/user_login_modify"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_modify"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#898cd3"
            android:lineSpacingExtra="5.5sp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.93"
        app:layout_constraintTop_toBottomOf="@id/user_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_id_box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/user_pw_box">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.86"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/user_id_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user_id"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:textColor="#5c5c5c"
                    android:lineSpacingExtra="5.5sp"
                    android:background="@drawable/btn_border_right_gray3"
                    app:layout_constraintWidth_percent="0.26"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/user_id_result"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/user_id_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="15dp"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="#5c5c5c"
                    android:lineSpacingExtra="5.5sp"
                    android:gravity="left|center"
                    app:layout_constraintWidth_percent="0.74"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/user_id_title"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_pw_box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:layout_marginBottom="8dp"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/user_id_box"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/user_co_box">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.86"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/user_pw_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user_pw"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:textColor="#5c5c5c"
                    android:lineSpacingExtra="5.5sp"
                    android:background="@drawable/btn_border_right_gray3"
                    app:layout_constraintWidth_percent="0.26"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/user_pw_result"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/user_pw_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="15dp"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="#5c5c5c"
                    android:lineSpacingExtra="5.5sp"
                    android:gravity="left|center"
                    android:inputType="textPassword"
                    app:layout_constraintWidth_percent="0.74"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/user_pw_title"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_co_box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:layout_marginTop="8dp"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/user_pw_box"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.86"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/user_co_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user_company"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:textColor="#5c5c5c"
                    android:lineSpacingExtra="5.5sp"
                    android:background="@drawable/btn_border_right_gray3"
                    app:layout_constraintWidth_percent="0.26"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/user_co_result"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/user_co_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="15dp"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="#5c5c5c"
                    android:lineSpacingExtra="5.5sp"
                    android:gravity="left|center"
                    app:layout_constraintWidth_percent="0.74"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/user_co_title"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>