<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.AdminActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/admin_guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/admin_guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_box1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.86"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@id/admin_guide2"
        app:layout_constraintLeft_toLeftOf="@id/admin_guide1"
        app:layout_constraintBottom_toTopOf="@id/admin_box2">

        <ImageView
            android:id="@+id/admin_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/admin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#020b4c"
            android:lineSpacingExtra="8sp"
            android:gravity="center"
            android:text="@string/admin_title"
            android:layout_marginTop="23.5dp"
            app:layout_constraintTop_toBottomOf="@id/admin_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_box2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.86"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toBottomOf="@id/admin_box1"
        app:layout_constraintRight_toRightOf="@id/admin_guide2"
        app:layout_constraintLeft_toLeftOf="@id/admin_guide1"
        app:layout_constraintBottom_toTopOf="@id/admin_box3">

        <Button
            android:id="@+id/admin_btn_start"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/admin_btn_start"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textColor="#ffffff"
            android:lineSpacingExtra="5.5sp"
            android:gravity="center"
            android:background="@drawable/btn_start"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/admin_btn_search"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/admin_btn_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/btn_round_gray"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintTop_toBottomOf="@id/admin_btn_start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/admin_search_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_search_icon"
                android:layout_marginRight="4dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/admin_search_txt"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/admin_search_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_btn_search"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="#ffffff"
                android:lineSpacingExtra="5.5sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/admin_search_img"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_box3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.86"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/admin_box2"
        app:layout_constraintRight_toRightOf="@id/admin_guide2"
        app:layout_constraintLeft_toLeftOf="@id/admin_guide1"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="11dp"
            android:textColor="#c7c7c7"
            android:lineSpacingExtra="3.5sp"
            android:text="Copyright 2021. Delynet all rights reserved."
            android:layout_marginBottom="36.5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/admin_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_config"
            android:layout_marginBottom="27dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>